# telegram_bot

./: .env_template  .gitignore  get_and_push_system_status.sh  health_check.py  setup.cfg  systems_monitor_bot.py
example/: requirements.txt  setup.cfg
example/local_data/: heartbeats.json
examples/example_bot/: .env_template  example_bot.py  requirements.txt
examples/example_bot/local_data/: daily.py
examples/example_bot/logs/: general_logs.example.json  health_logs.example.json
examples/example_logging/: .envTemplate  check_health.py  crontab_settings  push_logs.py
src/telegram_bot/: .env_template  .gitignore  README.md  general_logger.py  health_check.py  push_logs_for_bot.py  requirements.txt  systems_monitor_bot.py  utilities.py
