[metadata]
name = truflationdev.telegram_bot
version = 0.0.1
description = "Telegram monitoring bot and utilities"

[options]
install_requires =
   python-dotenv
   docopt
   pathlib

package_dir=
    =src
packages=find:

[options.packages.find]
where=src

[options.package_data]
telegram_bot = py.typed
