[metadata]
name = telegram_bot.example
version = 0.0.1
description = "example for setting up bot"


[options]
install_requires =
   truflation@git+https://github.com/truflationdev/telegram_bot.git
   python-dotenv
   docopt
   pathlib

package_dir=
    =src
packages=find:

[options.packages.find]
where=src
